--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 
 <body>
@@ -24,7 +25,7 @@
 
             <div class="col-lg-4 col-md-6 d-flex shadow-lg p-3 mb-5 bg-body-tertiary rounded">
                 <div class="card">
-                    <img src="https://justo.kaptiva.com.br/draftfile.php/3483/user/draft/627550841/6.png"
+                    <img src="/media/6.png"
                         class="card-img-top" alt="...">
                     <div class="card-body">
                         <h4>1. Preparando el viaje</h4>
@@ -81,7 +82,7 @@
 
             <div class="col-lg-4 col-md-6 d-flex shadow-lg p-3 mb-5 bg-body-tertiary rounded">
                 <div class="card">
-                    <img src="https://justo.kaptiva.com.br/draftfile.php/3483/user/draft/627550841/1.png"
+                    <img src="/media/1.png"
                         class="card-img-top" alt="...">
                     <div class="card-body">
                         <h4>2. Mis herramientas de trabajo</h4>
@@ -135,7 +136,7 @@
 
             <div class="col-lg-4 col-md-6 d-flex shadow-lg p-3 mb-5 bg-body-tertiary rounded">
                 <div class="card">
-                    <img src="https://justo.kaptiva.com.br/draftfile.php/3483/user/draft/627550841/Curso%20nuestro%20negocio.png"
+                    <img src="/media/4.png"
                         class="card-img-top" alt="...">
                     <div class="card-body">
                         <h4>3. Experiencia del cliente</h4>
