--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <div class="col-lg-4 col-md-6 d-flex shadow-lg p-3 mb-5 bg-body-tertiary rounded">
                 <div class="card">
-                    <img src="/media/6.png"
+                    <img src="./media/6.png"
                         class="card-img-top" alt="...">
                     <div class="card-body">
                         <h4>1. Preparando el viaje</h4>
@@ -82,7 +82,7 @@
 
             <div class="col-lg-4 col-md-6 d-flex shadow-lg p-3 mb-5 bg-body-tertiary rounded">
                 <div class="card">
-                    <img src="/media/1.png"
+                    <img src="./media/1.png"
                         class="card-img-top" alt="...">
                     <div class="card-body">
                         <h4>2. Mis herramientas de trabajo</h4>
@@ -136,7 +136,7 @@
 
             <div class="col-lg-4 col-md-6 d-flex shadow-lg p-3 mb-5 bg-body-tertiary rounded">
                 <div class="card">
-                    <img src="/media/4.png"
+                    <img src="./media/4.png"
                         class="card-img-top" alt="...">
                     <div class="card-body">
                         <h4>3. Experiencia del cliente</h4>
